<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstEncryption">


    <EditText
        android:id="@+id/encryptionBox"
        android:layout_width="382dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/InsideAnyEncryptionBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/encryptionKeyBox"
        android:layout_width="382dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="Enter The Key To Encrypt With"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/decryptionBox"
        android:layout_width="382dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/InsideAnyDecryptionBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <EditText
        android:id="@+id/decryptionKeyBox"
        android:layout_width="382dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="Enter The Key To Decrypt With"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <Button
        android:id="@+id/encryptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EncryptButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/decryptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DecryptButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />


</androidx.constraintlayout.widget.ConstraintLayout>